2025-04-20 Gabriele Gorla <gorlik@yahoo.com>

  	* device/include/string.h:
  	  Add intrinsic named address space to library functions implemented in asm.
  	* support/regression/tests/float_single.c.in:
  	  Add support for non-reentrant float library.
  	* device/include/math.h:
  	  Make the math library non-reentrant by default on mos6502/65c02 and HC08/S08.

2025-04-17 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Improved DPTR tracking and cleanup genPointerGet.

2025-04-11 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Fix issue in genPointerGet when both left and result are XA.

2025-04-06 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Try to keep 0 in Y when possible.
 
2025-04-05 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_mulint.s:
  	  Minor mulint improvement.
  	* src/mos6502/gen.c:
	  Add tracking for XA register.
	  Cleanup literal register debug printing.
	  Additional register tracking.
   	* src/mos6502/peeph.def:
   	  Remove several rules made obsolete by register tracking.

2025-03-23 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_mulint.s:
  	  Reimplement mulint.

2025-03-29 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCC.y:
	  Reduce code duplication in kr_declaration.

2025-03-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Document current f8 calling convention.

2025-03-23 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_strcmp.s,
  	  device/lib/mos6502/_strrchr.s:
  	  Small strcmp and strrchr in fixes.
   	* device/lib/_fsadd.c:
   	  Remove redundant sign check.
  	* device/lib/mos6502/_fsadd.s,
  	  device/lib/mos6502/_fssub.s:
  	  Implement fsadd and fssub in assembly.
  	* src/mos6502/gen.c:
  	  Restore regs from DPTR in genPointerGet.
  	  Enable XA=A+op optimization in genPlus.
  	* src/mos6502/peeph.def:
  	  Add several new rules.

2025-03-22 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c: