@@ -1,3 +1,8 @@
+2025-04-21 Gabriele Gorla <gorlik@yahoo.com>
+
+  	* device/lib/mos6502/_mullong.s:
+  	  Reimplement mullong.
+
 2025-04-20 Gabriele Gorla <gorlik@yahoo.com>
 
   	* device/include/string.h:
